[gd_scene load_steps=4 format=3 uid="uid://thve5vhi8jam"]

[ext_resource type="Texture2D" path="res://Assets/portraits/testactor2portrait.jpg" id="1_k8w5w"]
[ext_resource type="Script" path="res://Scripts/Systems/Dialog/DialogView.gd" id="2_rhf56"]
[ext_resource type="Script" path="res://Scripts/Systems/Dialog/DialogController.gd" id="3_cr0d0"]

[node name="DialogSystem" type="Node2D"]

[node name="DialogCanvas" type="CanvasLayer" parent="."]

[node name="DialogPanel" type="Panel" parent="DialogCanvas"]
unique_name_in_owner = true
offset_left = 57.0
offset_top = 44.0
offset_right = 1848.0
offset_bottom = 1016.0

[node name="Sprite2D" type="Sprite2D" parent="DialogCanvas/DialogPanel"]
position = Vector2(175, 172)
texture = ExtResource("1_k8w5w")

[node name="TopicsVBox" type="VBoxContainer" parent="DialogCanvas/DialogPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 27.0
offset_top = 372.0
offset_right = 455.0
offset_bottom = 924.0

[node name="Button" type="Button" parent="DialogCanvas/DialogPanel/TopicsVBox"]
layout_mode = 2
text = "Test Button"

[node name="DialogVBox" type="VBoxContainer" parent="DialogCanvas/DialogPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 700.0
offset_top = 62.0
offset_right = 1741.0
offset_bottom = 933.0

[node name="DialogCloseBtn" type="Button" parent="DialogCanvas/DialogPanel"]
layout_mode = 0
offset_left = 1732.0
offset_top = 5.0
offset_right = 1782.0
offset_bottom = 36.0
text = "Close"

[node name="Views" type="Node" parent="."]

[node name="DialogView" type="Node" parent="Views"]
unique_name_in_owner = true
script = ExtResource("2_rhf56")

[node name="Controllers" type="Node" parent="."]

[node name="DialogController" type="Node" parent="Controllers"]
unique_name_in_owner = true
script = ExtResource("3_cr0d0")

[connection signal="pressed" from="DialogCanvas/DialogPanel/DialogCloseBtn" to="Controllers/DialogController" method="_on_dialog_close_btn_pressed"]
